# kosmarium

./: .deny.toml  .gitignore  CLAUDE.md  COLORIZED_WIND_VECTOR_CODE_REVIEW.md  COMPLIANCE-REPORT.md  Cargo.toml  DOCUMENTATION-LICENSING.md  LICENSE  LICENSE-AUDIT.md  README.md  WIND_BAND_ARTIFACT_DEBUG_REPORT.md  atmospheric-physicist-peer-review.md  atmospheric_physics_validation.sage  atmospheric_redesign_critical_analysis.md  atmospheric_wind_band_assessment.md  climate-integration-assessment.md  climate-physics-forensic-analysis.md  climate-scientist-peer-review-response.md  climate-scientist-validation-assessment.md  code_review_orographic_precipitation.md  commit_organization_analysis.md  compilation_fixes_summary.md  comprehensive_metis_water_flow_validation_analysis.md  computational-hydrologist-peer-review.md  debug_cfd_physics.rs  debug_water_system  fix_water_flow_physics.patch  geophysical-forensic-analysis.md  geophysical-peer-review-of-atmospheric-solutions.md  hydrological_validation_analysis.md  implement-doc-licensing.sh  implement-license.sh  mathematical-analysis-report.md  sagemath_validation_findings.md  scale-aware-architecture-assessment.md  scale_aware_timestep.patch  shared-climate-team.yaml  storm_analysis_report.md  system-interactions-analysis.md  temperature_dynamic_range_review.md  (+15 more)
.claude/: journal-integration-template.md
debug_binaries_tmp/: debug_actual_terrain.rs  debug_biome_degradation.rs  debug_boundary_drainage.rs  debug_boundary_runtime.rs  debug_cache_keys.rs  debug_concentration_factor.rs  debug_concentration_factor.rs.disabled  debug_coordinate_system.rs  debug_diamond_square.rs  debug_drainage_regression.rs  debug_flow_thresholds.rs  debug_nan_investigation.rs  debug_sampling_math.rs  debug_sampling_pipeline.rs  debug_scaling.rs  debug_water_system.rs  debug_wind_issue.rs  performance_test.rs  test_concentration_factor_fix.rs  test_distance_field_fix.rs  test_nan_edge_cases.rs  test_pressure_evolution.rs  validate_opengl_data.rs
docs/: 3d-spherical-rendering-implementation-plan.md  CASCADE_DYNAMICS_PITCH.md  README-ENHANCEMENT-RECOMMENDATIONS.md  SCIENTIFIC-PLATFORM-OVERVIEW.md  USER-PATHWAY-GUIDE.md  WIND_BAND_ARTIFACT_ANALYSIS.md  agent-collaboration-experiment-handoff.md  agent-collaboration-testing-hypotheses.md  agent-driven-cmm-concept.md  agent-interaction-patterns.md  architecture-decisions.md  ascii-framebuffer-user-guide.md  climate-coupling-analysis.md  collaborative-scientific-physics-specification.md  confluence-multiplayer-pitch.md  deep-dive-scaling-foundations.md  deep-dive-water-flow-physics-validation.md  development-standards.md  drift-protocol-pitch.md  ecosystem-feedback-code-review.md  emergence-cultivation-pitch.md  experiment-status.md  expert-architecture-assessment.md  fantasy-physics-geological-specification.md  fantasy-physics-solo-analysis.md  geological-stewardship-pitch.md  git-organization-completion-summary.md  git-reorganization-summary.md  glossary.md  hydrological-analysis-continental-water-accumulation.md  memory-palace-pitch.md  memory-weavers-pitch.md  metis-mathematical-computing-evaluation.md  network-wars-pitch.md  performance-analysis-phases-1-3.md  phase-2-1-cross-system-integration-audit.md  phase-2-environmental-systems.md  phase-4-boundary-condition-results.md  phase-4a-agent-specification.md  physics-analysis-ecosystem-feedback.md  (+17 more)
docs/00-project/: README.md  (+2 more)
examples/: climate_system_demo.rs  convergence_study_demo.rs  dimensional_analysis_demo.rs  hydrology_biome_demo.rs  threshold_scaling_demo.rs  vegetation_state_demo.rs  water_climate_demo.rs
src/: agents.rs  atmosphere.rs  atmospheric_moisture.rs  biome.rs  cache_system.rs  climate.rs  convergence.rs  convergence_detection.rs  debug_flow_analysis.rs  debug_interval_issue.rs  debug_water_conservation.rs  dimensional.rs  drainage.rs  geological_evolution.rs  graphics_render.rs  lib.rs  main.rs  optimized_geological_evolution.rs  optimized_heightmap.rs  render.rs  scale.rs  sim.rs  spatial_partitioning.rs  tectonics.rs  tui.rs  water.rs  worldgen.rs
templates/: collaborative-evaluation-template.md  solo-analysis-template.md  template-index.md
(+252 files in other folders)
