[package]
name = "sim-protoype"
version = "0.1.0"
edition = "2024"
default-run = "sim-protoype"

[lib]
name = "sim_protoype"
path = "src/lib.rs"

[dependencies]
rand = "0.8"
crossterm = "0.27"
ratatui = "0.27"
tokio = { version = "1.0", features = ["full"] }
futures = "0.3"
atty = "0.2"
clap = { version = "4.0", features = ["derive"] }
macroquad = "0.4"

