[package]
name = "sim-prototype"
version = "0.1.0"
edition = "2024"
default-run = "sim-prototype"

[features]
default = ["simd"]
simd = []

[lib]
name = "sim_prototype"
path = "src/lib.rs"

# Applications
[[bin]]
name = "weather-demo"
path = "src/applications/weather_demo.rs"

# Debug and analysis tools
[[bin]]
name = "debug_drainage_regression"
path = "debug_binaries_tmp/debug_drainage_regression.rs"

[[bin]]
name = "debug_coordinate_system"
path = "debug_binaries_tmp/debug_coordinate_system.rs"

[[bin]]
name = "debug_diamond_square"
path = "debug_binaries_tmp/debug_diamond_square.rs"

[[bin]]
name = "test_pressure_evolution"
path = "debug_binaries_tmp/test_pressure_evolution.rs"

[[bin]]
name = "debug_water_system"
path = "debug_binaries_tmp/debug_water_system.rs"

[[bin]]
name = "debug_scaling"
path = "debug_binaries_tmp/debug_scaling.rs"

[[bin]]
name = "performance_test_debug"
path = "debug_binaries_tmp/performance_test.rs"

[[bin]]
name = "validate_opengl_data"
path = "debug_binaries_tmp/validate_opengl_data.rs"

[[bin]]
name = "debug_boundary_runtime"
path = "debug_binaries_tmp/debug_boundary_runtime.rs"


[[bin]]
name = "test_concentration_factor_fix"
path = "debug_binaries_tmp/test_concentration_factor_fix.rs"



[dependencies]
rand = "0.8"
crossterm = "0.27"
ratatui = "0.27"
tokio = { version = "1.0", features = ["full"] }
futures = "0.3"
atty = "0.2"
clap = { version = "4.0", features = ["derive"] }
macroquad = "0.4"
rayon = "1.8"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
chrono = { version = "0.4", features = ["serde"] }

